<resources>
    <string name="app_name">Biblioteca São Salvador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IDE: Android Studio</string>
    <string name="nav_header_subtitle">rafaelfranca2013@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre o App...</string>
    <string name="buttonPrincipal">Principal</string>
    <string name="buttonEncontros">Encontros</string>
    <string name="evento1">Evento</string>
    <string name="localdoEvento">Local: 1?</string>
    <string name="contato">Contatos: 1?</string>
    <string name="vazioText">Ainda Estou Vazio...T.T</string>

    <string name="sobre_o_app">Sobre o App</string>
    <string name="sobre_o_app2">Este é o protótipo de um App, ou seja a demosntração Gráfica do app</string>
    <string name="sobre_o_app3">Toda parte gráfica e implementação do
        App poderá ser Editada posteriormente de acordo com o projeto</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="facebook_app_id">991065237767016</string> <string name="fb_login_protocol_scheme">fb991065237767016</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Eventos</string>

    <string name="todo">TODO</string>
    <string name="title_activity_login">Logar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="icone">icone_list</string>
    <string name="descricao">Livro: </string>
    <string name="categoria">Categoria: </string>
    <string name="imagem_do_livro">Imagem do livro</string>

    <string name="button_delete">Excluir</string>
    <string name="button_edit">Editar</string>
    <string name="button_open">Abrir</string>
    <string name="text_dialog">Apagar o livro </string>
    <string name="text_yes">Sim</string>
    <string name="text_no">No</string>
    <string name="error_delete">Erro ao Deletar: </string>
    <string name="error">Erro: </string>
    <string name="delete_successful">Livro deletado</string>
    <string name="tag_debug">Debug: </string>
    <string name="tag_id">id</string>
    <string name="child_category">categorias</string>
    <string name="child_book">livros</string>
    <string name="deleted_image">Imagem Deletada</string>
    <string name="invalid_path_error">Selecione um livro.</string>
    <string name="successful_image_upload">Imagem Enviada.</string>
    <string name="error_image_upload">Falha ao carregar o livro.</string>
    <string name="unknow_error">Erro desconhecido! </string>
    <string name="adicionar_livro">Adicionar Livro</string>
    <string name="categorias">Categorias</string>
    <string name="livros">Livros</string>
    <string name="livro_n_baixado">Livro Não Baixado</string>
    <string name="livro_baixado">Livro Baixado</string>
    <string name="search_hint">Pesquisar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="registro">Registro</string>
    <string name="registrar">Registrar</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="conta">Conta</string>
    <string name="prefer_ncias">Preferências</string>
    <string name="favoritos">Favoritos</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="inicio">Inicio</string>
    <string name="communicate">Communicate</string>
    <string name="convidar_amigos">Convidar Amigos</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="resultados_da_pesquisa">Resultados da pesquisa</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="logo">Logo</string>
    <string name="seus_eventos">Suas Ocorrências</string>
    <string name="nome_do_usuario">Nome do Usuario</string>
    <string name="email_do_usuario">Email do usuario</string>
    <string name="trocar_foto">Trocar Foto</string>
    <string name="img_usuario">img_usuario</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="informacoes">Informações</string>
    <string name="preferencias">Preferências</string>
    <string name="title_activity_edit_user_info">EditUserInfoActivity</string>
</resources>
