<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/VerdeEscuro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/logo_biblioteca_edit" />

    <TextView
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/imageView"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Branco" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="11dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/Branco" />

</RelativeLayout>
