<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:targetApi="o"
    tools:context=".activity.RegistroActivity">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_concluir_regisstro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="119dp"
        android:background="@drawable/round_corner_indice"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_form" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="248dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/registro"
                    android:textAlignment="center"
                    android:textColor="@color/Branco"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/nome"
                android:textColor="@color/Branco" />

            <EditText
                android:id="@+id/edit_text_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sobrenome"
                android:textColor="@color/Branco" />

            <EditText
                android:id="@+id/edit_text_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/sobrenome"
                android:inputType="textPersonName"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/email"
                android:textColor="@color/Branco" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress|textEmailSubject"
                android:padding="6dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/senha"
                android:textColor="@color/Branco" />

            <EditText
                android:id="@+id/edit_text_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPersonName|textWebPassword|numberDecimal|numberPassword"
                android:padding="6dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>