<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_livro_fav"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/icone" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/text_livro_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textColor="@color/Preto" />

            <TextView
                android:id="@+id/text_categoria_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/categoria"
                android:textColor="@color/Preto"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/checkbox_favorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@android:drawable/btn_star"
                android:checked="false" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
