<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.EditUserInfoActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar"
        android:textColor="@color/Preto"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/nome"
                android:textColor="@color/Preto" />

            <EditText
                android:id="@+id/edit_text_Info_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sobrenome"
                android:textColor="@color/Preto" />

            <EditText
                android:id="@+id/edit_text_Info_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/sobrenome"
                android:inputType="textPersonName"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/email"
                android:textColor="@color/Preto" />

            <EditText
                android:id="@+id/edit_text_Info_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Curso"
                android:textColor="@color/Preto" />

            <EditText
                android:id="@+id/edit_text_Info_curso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="Curso"
                android:inputType="text|textCapWords"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Semestre"
                android:textColor="@color/Preto" />

            <EditText
                android:id="@+id/edit_text_Info_semestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="Semestre"
                android:inputType="number"
                android:padding="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Idade"
                android:textColor="@color/Preto" />

            <EditText
                android:id="@+id/edit_text_Info_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:background="@drawable/round_corner_textview"
                android:ems="10"
                android:hint="Idade"
                android:inputType="number"
                android:padding="6dp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_edit_info_concluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Concluir" />
    </LinearLayout>
</LinearLayout>